View parent nodes from list

--- a/src/Kunstmaan/NodeBundle/Resources/translations/messages.en.yml
+++ b/src/Kunstmaan/NodeBundle/Resources/translations/messages.en.yml
@@ -13,6 +13,7 @@ action:
     addsubpage: "Add subpage"
     duplicate: "Duplicate"
     duplicate_with_children: "Duplicate with sub pages"
+    list_nodes: "List nodes"
 
 modal:
     sourcelanguage: "Source language"
